2011-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Condition the typedef for 'long long'
	of rcpp_long_long_type on the (still experimental) support for C++0x
	which can be enabled with the non-portable g++ flag '-std=c++0x';
	adding the test C++0x support suppresses a new warning with g++ about
	long long being part of C++98; thanks to Kurt Hornik for raising this

2011-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/grow.h: Applied another patch kindly supplied by
	Murray which fixes another clang/llvm and C++ conformance issue by
	re-ordering declarations as unqualified names must be declared before
	they are used, even when used within templates.

2011-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Makefile: Call R and Rscript relative to R_HOME/bin

2011-02-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.2
        * inst/NEWS: Release 0.9.2
        * inst/include/Rcpp/config.h: Release 0.9.2
        * debian/*: Similarly updated for new release to Debian

        * inst/include/RcppCommon.h: Apply patch by Alexey Stukalov to enable
        basic Intel Compiler support without Cxx0x or TR1 features

        * inst/THANKS: Added some Thank You! to Baptiste, Alexey and Ken

        * inst/include/Rcpp/Module.h: Minor reworking of module loading
        macro to get rid of one g++ warning

2011-02-22  Dirk Eddelbuettel  <edd@debian.org>

        * inst/unitTests/runit.Module.client.package.R: Add a test for OS X
        10.5.* or older and do not execute the test here as g++ 4.2.1 balks
        at some of the Rcpp modules code. Thanks to Simon Urbankek for
        pinning this down and Baptiste Auguie for additonal testing.

2011-02-20  Dirk Eddelbuettel  <edd@debian.org>

        * inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Added RcppArmadillo example

2011-02-19  Dirk Eddelbuettel  <edd@debian.org>

        * inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Added three more setup-related